--- a/test/e2e/stage_autolength/autowidth.html
+++ b/test/e2e/stage_autolength/autowidth.html
@@ -15,12 +15,12 @@
 </style>
 
 <body>
-  <div id="stage" data-lj-type="stage" data-lj-auto-width="layer">
-    <div id="layer" data-lj-type="layer" data-lj-default-frame="frame1">
-      <div id="frame1" data-lj-type="frame" data-lj-name="frame1" data-lj-fit-to="height" style="background:blue;width:800px; height:500px">
+  <div id="stage" data-lj-type="stage" data-lj-auto-width="layer" style="width:500px; height:600px">
+    <div id="layer" data-lj-type="layer" data-lj-default-frame="frame1" data-lj-fit-to="height">
+      <div id="frame1" data-lj-type="frame" data-lj-name="frame1" style="background:blue;height:800px; width:500px">
         <h1>FRAME  1</h1>
       </div>
-      <div id="frame2" data-lj-type="frame" data-lj-name="frame2" data-lj-fit-to="height" style="background:red;width:500px; height:500px">
+      <div id="frame2" data-lj-type="frame" data-lj-name="frame2" style="background:red;height:500px; width:500px">
         <h1>FRAME  2 </h1>
       </div>
     </div>
