--- a/examples/slider/index.html
+++ b/examples/slider/index.html
@@ -30,8 +30,8 @@
       <!--  The control frame. The frame will be centered in the stage. -->
       <div lj-type="frame" lj-fit-to="width" lj-start-position="center" lj-no-scrolling="true">
         <!--  the link will trigger the transition to the previous frame of the currently active frame in layer "slider". -->
-        <a class="btn-left btn" href="#slider.!left?p=right">&lt;</a>
-        <a class="btn-right btn" href="#slider.!right?p=left">&gt;</a>
+        <a class="btn-left btn" href="#slider.!left&p=right">&lt;</a>
+        <a class="btn-right btn" href="#slider.!right&p=left">&gt;</a>
       </div>
     </div>
   </div>
