--- a/examples/lightbox/index.html
+++ b/examples/lightbox/index.html
@@ -14,7 +14,7 @@
         takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
         et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
       </p>
-      <a href="#box-layer.box1?p=fade&t=0.2s">click here ...</a> <!-- The link opening the lighbox including animation parameters -->
+      <a href="#box-layer.box1&p=fade&t=0.2s">click here ...</a> <!-- The link opening the lighbox including animation parameters -->
       <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
         takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
         et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
@@ -25,7 +25,7 @@
     <div lj-type="frame" lj-name="box1" lj-fit-to="responsive" class="modal"> <!-- The content of the modal. -->
       <div class="modal-inner">
         <div>
-          <a href="#box-layer.!none?t=0.2s&p=fade" class="close">&#x2573;</a> <!-- A Link as close button which resets the active frame of the lighbox layer to "!none" -->
+          <a href="#box-layer.!none&t=0.2s&p=fade" class="close">&#x2573;</a> <!-- A Link as close button which resets the active frame of the lighbox layer to "!none" -->
         </div>
         <h1>A modal</h1>
         <p>
