tests: specsinbrowser: fix html structure

--- a/test/SpecsInBrowser.html
+++ b/test/SpecsInBrowser.html
@@ -11,16 +11,11 @@
   <script src="lib/jasmine-2.3.4/jasmine.js"></script>
   <script src="lib/jasmine-2.3.4/jasmine-html.js"></script>
   <script src="lib/jasmine-2.3.4/boot.js"></script>
-
-  <!-- include source files here... -->
-
-
-
-
 </head>
 
 <body>
-  <div id="testContainer"/>
-</body>
+  <div id="testContainer"></div>
   <script src="js/specs.js"></script>
+</body>
+
 </html>
