examples: file router: used zoom transitions

--- a/examples/filerouter/index.html
+++ b/examples/filerouter/index.html
@@ -23,7 +23,7 @@
         takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
         et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
       </p>
-      <a href="./second.html?p=fade&t=2s">second page</a> <!-- The link to the scond page-->
+      <a href="./second.html?p=zoomout&t=0.5s">second page</a> <!-- The link to the scond page-->
     </div>
   </div>
   <div lj-type="layer" lj-default-frame="!none" lj-name="box-layer" lj-native-scroll="false"> <!-- The layer for the lightbox. The initial frame is the special frame "!none" which repesents an empty layer. -->
