--- a/examples/filerouter/second.html
+++ b/examples/filerouter/second.html
@@ -19,7 +19,7 @@
         takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
         et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
       </p>
-      <a href="./index.html?p=fade&t=2s">first page</a> <!-- The link opening the lighbox including animation   -->
+      <a href="./index.html?p=zoomout&t=0.5s">first page</a> <!-- The link opening the lighbox including animation   -->
     </div>
   </div>
   <div lj-type="layer" lj-default-frame="!none" lj-name="box-layer" lj-native-scroll="false"> <!-- The layer for the lightbox. The initial frame is the special frame "!none" which repesents an empty layer. -->
