--- a/test/e2e/interstage/index.html
+++ b/test/e2e/interstage/index.html
@@ -19,13 +19,8 @@
     <div id="layer1" data-lj-type="layer" data-lj-default-frame="frame1" data-lj-native-scroll="false">
       <div id="frame1" data-lj-type="frame"  data-lj-name="frame1" data-lj-fit-to="height" style="height:300px;width:500px; background-color:red">
         <h1>frame1<h1>
-      </div>
-      <div id="frame2" data-lj-type="frame"  data-lj-name="frame2" data-lj-fit-to="height" style="height:300px;width:500px; background-color:green">
-        <h1>frame2<h1>
-      </div>
-    </div>
-  </div>
-  <div id="stage2" data-lj-type="stage" style="height:400px; width:00px,margin-top:300px;">
+		
+		 <div id="stage2" data-lj-type="stage" style="height:100px; width:100px,margin-left:100px;">
     <div id="layer2" data-lj-type="layer" data-lj-default-frame="frameX" data-lj-native-scroll="false">
       <div id="frameX" data-lj-type="frame"  data-lj-name="frameX" data-lj-fit-to="height" style="height:300px;width:500px; background-color:yellow">
         <h1>frameX<h1>
@@ -35,6 +30,13 @@
       </div>
     </div>
   </div>
+		
+      </div>
+      <div id="frame2" data-lj-type="frame"  data-lj-name="frame2" data-lj-fit-to="height" style="height:300px;width:500px; background-color:green">
+        <h1>frame2<h1>
+      </div>
+    </div>
+  </div> 
   <script src="../../../dist/layerjs.js"></script>
   <script>
     layerJS.init();
