add attribute to disable layers link handling

--- a/examples/nested/index.html
+++ b/examples/nested/index.html
@@ -116,11 +116,13 @@
           <tr>
             <td style="width: 15%; cursor: pointer;">
               <div id="prev">
-                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20 20" enable-background="new 0 0 20 20" xml:space="preserve" width="40">
-                  <path fill="#455A64" d="M12.452,4.516c0.446,0.436,0.481,1.043,0,1.576L8.705,10l3.747,3.908c0.481,0.533,0.446,1.141,0,1.574c-0.445,0.436-1.197,0.408-1.615,0c-0.418-0.406-4.502-4.695-4.502-4.695C6.112,10.57,6,10.285,6,10s0.112-0.57,0.335-0.789c0,0,4.084-4.287,4.502-4.695C11.255,4.107,12.007,4.08,12.452,4.516z"
-                  />
-                </svg>
+                <a href="#layer_image.!right&p=left">
+                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20 20" enable-background="new 0 0 20 20" xml:space="preserve" width="40">
+                    <path fill="#455A64" d="M12.452,4.516c0.446,0.436,0.481,1.043,0,1.576L8.705,10l3.747,3.908c0.481,0.533,0.446,1.141,0,1.574c-0.445,0.436-1.197,0.408-1.615,0c-0.418-0.406-4.502-4.695-4.502-4.695C6.112,10.57,6,10.285,6,10s0.112-0.57,0.335-0.789c0,0,4.084-4.287,4.502-4.695C11.255,4.107,12.007,4.08,12.452,4.516z"
+                    />
+                  </svg>
               </div>
+              </a>
             </td>
             <td>
               <div id="stage_images" data-lj-type="stage">
@@ -148,10 +150,12 @@
             </td>
             <td style="width: 15%; cursor: pointer;">
               <div id="next">
-                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20 20" enable-background="new 0 0 20 20" xml:space="preserve" width="40">
-                  <path fill="#455A64" d="M9.163,4.516c0.418,0.408,4.502,4.695,4.502,4.695C13.888,9.43,14,9.715,14,10s-0.112,0.57-0.335,0.787c0,0-4.084,4.289-4.502,4.695c-0.418,0.408-1.17,0.436-1.615,0c-0.446-0.434-0.481-1.041,0-1.574L11.295,10L7.548,6.092c-0.481-0.533-0.446-1.141,0-1.576C7.993,4.08,8.745,4.107,9.163,4.516z"
-                  />
-                </svg>
+                <a href="#layer_image.!left&p=right">
+                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20 20" enable-background="new 0 0 20 20" xml:space="preserve" width="40">
+                    <path fill="#455A64" d="M9.163,4.516c0.418,0.408,4.502,4.695,4.502,4.695C13.888,9.43,14,9.715,14,10s-0.112,0.57-0.335,0.787c0,0-4.084,4.289-4.502,4.695c-0.418,0.408-1.17,0.436-1.615,0c-0.446-0.434-0.481-1.041,0-1.574L11.295,10L7.548,6.092c-0.481-0.533-0.446-1.141,0-1.576C7.993,4.08,8.745,4.107,9.163,4.516z"
+                    />
+                  </svg>
+                </a>
               </div>
             </td>
           </tr>
@@ -209,18 +213,6 @@
   <script src="../../dist/layerjs.js"></script>
   <script>
     layerJS.init();
-    // API calls for slider left/right buttons
-    var ilayer = layerJS.select('#layer_image');
-    document.getElementById('next').addEventListener('click', function() {
-      ilayer.transitionTo(ilayer.currentFrame.neighbors().r, {
-        type: 'left'
-      });
-    });
-    document.getElementById('prev').addEventListener('click', function() {
-      ilayer.transitionTo(ilayer.currentFrame.neighbors().l, {
-        type: 'right'
-      });
-    });
     // API calls for menu open closely
     var mlayer = layerJS.select('#layer_menu');
     document.getElementsByClassName('menubox')[0].addEventListener('click', function() {
