fix for filerouter attribute; modified filerouter example to use new attribute

--- a/examples/filerouter/index.html
+++ b/examples/filerouter/index.html
@@ -7,7 +7,7 @@
   <link href="your-style.css" type="text/css" rel="stylesheet" />
 </head>
 
-<body lj-type="stage"> <!-- Add a stage. -->
+<body lj-type="stage" lj-router="filerouter"> <!-- Add a stage. -->
   <div lj-type="layer" lj-default-frame="frame1"> <!-- The layer for the main content -->
     <div lj-type="frame" lj-name="frame1" lj-fit-to="responsive-width"> <!-- The content frame -->
       <h1> frame1 </h1>
