--- a/examples/interstage/index.html
+++ b/examples/interstage/index.html
@@ -13,12 +13,29 @@
 
 <body lj-type="stage">
   <div lj-type="layer" lj-native-scroll="false" lj-layout="canvas" lj-name="canvas" lj-default-frame="overview">
-    <div lj-type="frame" id="overview" lj-x="0" lj-y="0">
+    <div lj-type="frame" id="overview" lj-x="-50" lj-y="-50">
 
     </div>
-    <a href="#top.card1" lj-type="frame" class="card" id="card1" lj-x="0" lj-y="0">
-      card 1
-    </a>
+    <div lj-type="frame" class="card" id="card1" lj-x="0" lj-y="0">
+      <div class="cardcontainer">
+        <a href="#top.card1&t=5s"><img class="cardimg" src="profile.png" /></a>
+        <h2> Card I</h2>
+        <h3 stlye="clear: both">Lorem ipsum</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
+          sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et
+          ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        </p>
+        <p>
+          Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, litot Europa usa li sam vocabular. Li lingues differe solmen in li grammatica, li pronunciation e li plu commun vocabules. Omnicos directe
+          al desirabilite de un nov lingua franca: On refusa continuar payar custosi traductores. At solmen va esser necessi far uniform grammatica, pronunciation e plu sommun paroles. Ma quande lingues coalesce, li grammatica del resultant lingue es
+          plu simplic e regulari quam ti del coalescent lingues. Li nov lingua franca va esser plu simplic e regulari quam li existent Europan lingues. It va esser tam simplic quam Occidental in fact, it va esser Occidental. A un Angleso it va semblar
+          un simplificat Angles, quam un skeptic Cambridge amico dit me que Occidental es.Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica,
+        </p>
+
+      </div>
+
+    </div>
     <a href="#top.card2" lj-type="frame" class="card" id="card2" lj-x="200" lj-y="0">
       card 2
     </a>
@@ -27,7 +44,7 @@
     </a>
 
   </div>
-  <div lj-type="layer" lj-native-scroll="false" lj-name="top" lj-default-frame="!none">
+  <div lj-type="layer" lj-native-scroll="false" lj-name="top" lj-default-frame="!none" lj-fit-to="responsive">
 
 
   </div>
