extend grid example

--- a/examples/grid/index.html
+++ b/examples/grid/index.html
@@ -106,7 +106,9 @@
       <div v-for="c in cards" lj-type="frame" id="card{{ c.id }}">
         <div class="card">
           <div class="imgContainer">
-            <img src="img_avatar2.png" alt="Avatar">
+            <a href="#card{{ c.id}}">
+              <img src="img_avatar2.png" alt="Avatar">
+            </a>
           </div>
           <div class="container">
             <b>Jane Doe</b>
